--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 <div id="main" role="main">
     <div class="sidebar sticky">
         <div itemscope="" itemtype="http://schema.org/Person">
-            <div class="author__avatar"><img src="./victor_files/victor.jpg"
+            <div class="author__avatar"><img src="./victor_files/Victor.jpg"
                                              class="author__avatar" alt="Xinpeng Wang "></div>
             <div class="author__content"><h3 class="author__name">Xinpeng Wang </h3>
                 <p class="author__bio">A second-year graduate student at Tsinghua University.</p></div>
