--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0030)https://foolfun.github.io/ -->
+<!-- saved from url=(0030)https://victorup.github.io/ -->
 <html lang="en" class=" js ">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> <!-- begin SEO -->
@@ -7,8 +7,8 @@
     <meta property="og:locale" content="en-US">
     <meta property="og:site_name" content="Xinpeng Wang 王新鹏">
     <meta property="og:title" content="Xinpeng Wang 王新鹏">
-    <link rel="canonical" href="https://foolfun.github.io/">
-    <meta property="og:url" content="https://foolfun.github.io/">
+    <link rel="canonical" href="https://victorup.github.io/">
+    <meta property="og:url" content="https://victorup.github.io/">
     <meta property="og:description" content="About me">
     <script async="" src="./victor_files/analytics.js.下载">
     </script>
@@ -16,10 +16,10 @@
         "@context": "http://schema.org",
         "@type": "Person",
         "name": "Xinpeng Wang 王新鹏",
-        "url": "https://foolfun.github.io",
+        "url": "https://victorup.github.io",
         "sameAs": null
     } </script> <!-- end SEO -->
-    <link href="https://foolfun.github.io/feed.xml" type="application/atom+xml" rel="alternate"
+    <link href="https://victorup.github.io/feed.xml" type="application/atom+xml" rel="alternate"
           title="Xinpeng Wang 王新鹏 Feed"> <!-- http://t.co/dKP3o1e -->
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -29,45 +29,47 @@
     <link rel="stylesheet" href="./victor_files/main.css">
     <meta http-equiv="cleartype" content="on"> <!-- start custom head snippets -->
     <link rel="apple-touch-icon" sizes="57x57"
-          href="https://foolfun.github.io/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="60x60"
-          href="https://foolfun.github.io/images/apple-touch-icon-60x60.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-60x60.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="72x72"
-          href="https://foolfun.github.io/images/apple-touch-icon-72x72.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-72x72.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="76x76"
-          href="https://foolfun.github.io/images/apple-touch-icon-76x76.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-76x76.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="114x114"
-          href="https://foolfun.github.io/images/apple-touch-icon-114x114.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-114x114.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="120x120"
-          href="https://foolfun.github.io/images/apple-touch-icon-120x120.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-120x120.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="144x144"
-          href="https://foolfun.github.io/images/apple-touch-icon-144x144.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-144x144.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="152x152"
-          href="https://foolfun.github.io/images/apple-touch-icon-152x152.png?v=M44lzPylqQ">
+          href="https://victorup.github.io/images/apple-touch-icon-152x152.png?v=M44lzPylqQ">
     <link rel="apple-touch-icon" sizes="180x180"
-          href="https://foolfun.github.io/images/apple-touch-icon-180x180.png?v=M44lzPylqQ">
-    <link rel="icon" type="image/png" href="https://foolfun.github.io/images/favicon-32x32.png?v=M44lzPylqQ"
+          href="https://victorup.github.io/images/apple-touch-icon-180x180.png?v=M44lzPylqQ">
+    <link rel="icon" type="image/png" href="https://victorup.github.io/images/favicon-32x32.png?v=M44lzPylqQ"
           sizes="32x32">
     <link rel="icon" type="image/png"
-          href="https://foolfun.github.io/images/android-chrome-192x192.png?v=M44lzPylqQ" sizes="192x192">
-    <link rel="icon" type="image/png" href="https://foolfun.github.io/images/favicon-96x96.png?v=M44lzPylqQ"
+          href="https://victorup.github.io/images/android-chrome-192x192.png?v=M44lzPylqQ" sizes="192x192">
+    <link rel="icon" type="image/png" href="https://victorup.github.io/images/favicon-96x96.png?v=M44lzPylqQ"
           sizes="96x96">
-    <link rel="icon" type="image/png" href="https://foolfun.github.io/images/favicon-16x16.png?v=M44lzPylqQ"
+    <link rel="icon" type="image/png" href="https://victorup.github.io/images/favicon-16x16.png?v=M44lzPylqQ"
           sizes="16x16">
-    <link rel="manifest" href="https://foolfun.github.io/images/manifest.json?v=M44lzPylqQ">
-    <link rel="mask-icon" href="https://foolfun.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ"
+    <link rel="manifest" href="https://victorup.github.io/images/manifest.json?v=M44lzPylqQ">
+    <link rel="mask-icon" href="https://victorup.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ"
           color="#000000">
-    <link rel="shortcut icon" href="https://foolfun.github.io/images/favicon.ico?v=M44lzPylqQ">
+    <link rel="shortcut icon" href="https://victorup.github.io/images/favicon.ico?v=M44lzPylqQ">
     <meta name="msapplication-TileColor" content="#000000">
-    <meta name="msapplication-TileImage" content="https://foolfun.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
-    <meta name="msapplication-config" content="https://foolfun.github.io/images/browserconfig.xml?v=M44lzPylqQ">
+    <meta name="msapplication-TileImage" content="https://victorup.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
+    <meta name="msapplication-config" content="https://victorup.github.io/images/browserconfig.xml?v=M44lzPylqQ">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="./victor_files/academicons.css">
     <script type="text/x-mathjax-config;executed=true">
          MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } });
+
     </script>
     <script type="text/x-mathjax-config;executed=true">
          MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], processEscapes: true } });
+
     </script>
     <script src="./victor_files/latest.js.下载" async=""></script><!-- end custom head snippets -->
     <script type="text/javascript" async="" src="./victor_files/MathJax.js.下载"></script>
@@ -748,7 +750,7 @@
                     <div class="navicon"></div>
                 </button>
                 <ul class="visible-links">
-                    <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://foolfun.github.io/">
+                    <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://victorup.github.io/">
                         Xinpeng Wang 王新鹏</a></li>
                 </ul>
                 <ul class="hidden-links hidden"></ul>
@@ -762,13 +764,14 @@
             <div class="author__avatar"><img src="./victor_files/Victor.jpg"
                                              class="author__avatar" alt="Xinpeng Wang "></div>
             <div class="author__content"><h3 class="author__name">Xinpeng Wang </h3>
-                <p class="author__bio">A second-year graduate student at Tsinghua University.</p></div>
+                <p class="author__bio">A first-year Ph.D. student at <a href="https://www.tongji.edu.cn/">Tongji
+                    University.</a></p></div>
             <div class="author__urls-wrapper">
                 <button class="btn btn--inverse">Follow</button>
                 <ul class="author__urls social-icons">
-                    <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> Beijing, China</li>
+                    <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> Shanghai, China</li>
                     <li><a href="mailto:wangxinpeng@tongji.edu.cn"><i class="fas fa-fw fa-envelope"
-                                                                           aria-hidden="true"></i> Email</a></li>
+                                                                      aria-hidden="true"></i> Email</a></li>
                     <li><a href="https://github.com/victorup"><i class="fab fa-fw fa-github" aria-hidden="true"></i>
                         Github</a></li>
                     <li><a href="https://scholar.google.com.hk/citations?user=2euMY5oAAAAJ&hl=zh-CN;hl=zh-CN"><i
@@ -782,74 +785,30 @@
         <meta itemprop="description" content="About me">
         <div class="page__inner-wrap">
             <header><h1 class="page__title" itemprop="headline">Xinpeng Wang 王新鹏</h1></header>
-            <section class="page__content" itemprop="text"><p>I am now a third-year graduate student in the <a
-                    href="http://coai.cs.tsinghua.edu.cn/">Conversational AI Lab (CoAI)</a>, <a
-                    href="http://www.cs.tsinghua.edu.cn/">Department of Computer Science and Technology</a>, Tsinghua
-                University, Beijing, China, under the supervision of Prof. <a
-                        href="http://coai.cs.tsinghua.edu.cn/hml/">Minlie Huang</a>. Before joining CoAI, I received my
-                bachelor degree in the Department of Physics, Tsinghua University. Here is my <a
-                        href="https://foolfun.github.io/_pages/cv_guanjian.pdf">cv</a> and <a
-                        href="https://foolfun.github.io/_pages/cv_guanjian_zh.pdf">简历</a>.</p>
-                <p>My research interests lie in <strong>open-ended language generation</strong><a
-                        href="https://github.com/thu-coai/PaperForONLG">[paper list]</a>, <strong>reinforcement
-                    learning</strong>, <strong>information retrieval</strong>, etc.</p>
+            <section class="page__content" itemprop="text">
+                <p>I am now a first-year Ph.D. student in the Department of
+                    Computer Science and Technology, Tongji University, Shanghai, China.
+                    Here is my <a href="https://victorup.github.io/_pages/xinpeng_wang_cv.pdf">cv</a>.
+                    <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
+                <p>My research interest is open-ended language generation,
+                    including <strong>story generation</strong> and <strong>dialogue generation</strong>
+                    with knowledge enhancing and emotion-driving, etc.</p>
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
-                    <li><strong>Xinpeng Wang </strong>, Ziqi Liu, Minlie Huang. A Corpus for Understanding and Generating
-                        Moral Stories. <em>NAACL 2022</em>. <a href="https://arxiv.org/abs/2204.09438">[pdf]</a> <a
-                                href="https://github.com/thu-coai/MoralStory">[data]</a></li>
-                    <li>Jiaxin Wen, Zhexin Zhang, <strong>Xinpeng Wang </strong>, Minlie Huang. Persona-Guided Planning for
-                        Controlling the Protagonist’s Persona in Story Generation. <em>NAACL 2022</em>. <a
-                                href="https://arxiv.org/pdf/2204.10703.pdf">[pdf]</a> <a
-                                href="https://%20github.com/thu-coai/ConPer">[code]</a></li>
-                    <li><strong>Xinpeng Wang </strong>, Zhuoer Feng, Yamei Chen, Ruilin He, Xiaoxi Mao, Changjie Fan, Minlie
-                        Huang. LOT: A Story-Centric Benchmark for Evaluating Chinese Long Text Understanding and
-                        Generation. <em>TACL 2022.</em> <a
-                                href="https://direct.mit.edu/tacl/article/doi/10.1162/tacl_a_00469/110537/LOT-A-Story-Centric-Benchmark-for-Evaluating">[pdf]</a>
-                        <a href="https://github.com/thu-coai/LOT-LongLM">[code]</a></li>
-                    <li><strong>Xinpeng Wang </strong>, Zhexin Zhang, Zhuoer Feng, Zitao Liu, Wenbiao Ding, Xiaoxi Mao,
-                        Changjie Fan, Minlie Huang. OpenMEVA: A Benchmark for Evaluating Open-ended Story Generation
-                        Metrics. <em>ACL 2021, Online Conference.</em> <a
-                                href="https://aclanthology.org/2021.acl-long.500/">[pdf]</a> <a
-                                href="https://github.com/thu-coai/OpenMEVA">[toolkit]</a></li>
-                    <li><strong>Xinpeng Wang </strong>, Xiaoxi Mao, changjie fan, Zitao Liu, Wenbiao Ding, Minlie Huang.
-                        Long Text Generation by Modeling Sentence-Level and Discourse-Level Coherence. <em>ACL 2021,
-                            Online Conference.</em> <a href="https://aclanthology.org/2021.acl-long.499/">[pdf]</a> <a
-                                href="https://github.com/thu-coai/HINT">[code]</a></li>
-                    <li>Xiangzhe Kong, Jialiang Huang, Ziquan Tung, <strong>Xinpeng Wang </strong> and Minlie Huang.
-                        Stylized Story Generation with Style-Guided Planning. <em>Findings of ACL 2021, Online
-                            Conference.</em> <a href="https://aclanthology.org/2021.findings-acl.215/">[pdf]</a> <a
-                                href="https://github.com/thu-coai/Stylized-Story-Generation-with-Style-Guided-Planning">[code]</a>
-                    </li>
-                    <li><strong>Xinpeng Wang </strong>, Minlie Huang. UNION: An Unreferenced Metric for Evaluating
-                        Open-ended Story Generation. <em>EMNLP 2020, Online Conference.</em> <a
-                                href="https://www.aclweb.org/anthology/2020.emnlp-main.736">[pdf]</a> <a
-                                href="https://github.com/thu-coai/UNION">[code]</a> <a
-                                href="https://www.aclweb.org/anthology/2020.emnlp-main.736.bib">[bib]</a></li>
-                    <li><strong>Xinpeng Wang </strong>, Fei Huang, Zhihao Zhao, Xiaoyan Zhu, Minlie Huang. A
-                        Knowledge-Enhanced Pretraining Model for Commonsense Story Generation. <em>TACL 2020.</em> <a
-                                href="https://www.mitpressjournals.org/doi/pdf/10.1162/tacl_a_00302">[pdf]</a> <a
-                                href="https://github.com/thu-coai/CommonsenseStoryGen">[code]</a> <a
-                                href="http://coai.cs.tsinghua.edu.cn/static/CommonsenseStoryGen/">[demo]</a> <a
-                                href="https://www.aclweb.org/anthology/2020.tacl-1.7.bib">[bib]</a></li>
-                    <li>Xueying Bai*, <strong>Xinpeng Wang </strong>*, Hongning Wang. A Model-Based Reinforcement Learning
-                        with Adversarial Training for Online Recommendation. <em>NeurIPS 2019</em>. <a
-                                href="http://papers.nips.cc/paper/9257-a-model-based-reinforcement-learning-with-adversarial-training-for-online-recommendation">[pdf]</a>
-                        <a href="https://github.com/JianGuanTHU/IRecGAN">[code]</a> <a
-                                href="https://proceedings.neurips.cc//paper/2019/file/e49eb6523da9e1c347bc148ea8ac55d3-Bibtex.bib">[bib]</a>
-                    </li>
-                    <li><strong>Xinpeng Wang *</strong>, Yansen Wang*, Minlie Huang. Story ending generation with
-                        incremental encoding and commonsense knowledge. <em>AAAI 2019, Honolulu, Hawaii, USA.</em> <a
-                                href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4612">[pdf]</a> <a
-                                href="https://github.com/JianGuanTHU/StoryEndGen">[code]</a> <a
-                                href="https://ojs.aaai.org/index.php/AAAI/citationstylelanguage/download/bibtex?submissionId=4612&amp;publicationId=3017]">[bib]</a>
-                    </li>
-                    <li>Pei Ke, <strong>Xinpeng Wang </strong>, Minlie Huang, Xiaoyan Zhu. Generating informative responses
-                        with controlled sentence function. <em>ACL 2018, Melbourne, Australia.</em> <a
-                                href="https://www.aclweb.org/anthology/P18-1139">[pdf]</a> <a
-                                href="https://github.com/kepei1106/SentenceFunction">[code]</a> <a
-                                href="https://www.aclweb.org/anthology/P18-1139.bib">[bib]</a></li>
+                    <li>Feifei Xu, Shanlin Zhou*, <strong>Xinpeng Wang *</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
+                        Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion
+                        <em>DASFAA 2022, <strong>Best Paper</strong></em>.
+                        <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
+                    <li>Feifei Xu, <strong>Xinpeng Wang </strong>, Shanlin Zhou.
+                        Story Generation Using Knowledge Graph under Psychological States.
+                        <em>WCMC Journal 2021 (Supervisor No.1, Student No.2)</em>.
+                        <a href="https://downloads.hindawi.com/journals/wcmc/2021/5530618.pdf">[pdf]</a></li>
+                    <li>Feifei Xu, Shanlin Zhou*, <strong>Xinpeng Wang</strong>,  Yunpu Ma, Volker Tresp, Yuyi Wang, Shanlin Zhou, and Haizhou Du.
+                       Controllable MultiCharacter Psychology-Oriented Story Generation.
+                        <em>CIKM 2020 (Supervisor No.1, Student No.2)</em>.
+                        <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a></li>
+
                 </ol>
             </section>
             <footer class="page__meta"></footer>
@@ -861,9 +820,10 @@
         <div class="page__footer-follow">
             <ul class="social-icons"></ul>
         </div>
-        <div class="page__footer-copyright">© 2022 Xinpeng Wang 王新鹏. Conversational AI Group, AI lab. of Computer Science,
-            Tsinghua University, Beijing 100084, China. Powered by <a href="http://jekyllrb.com/"
-                                                                      rel="nofollow">Jekyll</a> &amp; <a
+        <div class="page__footer-copyright">© 2022 Xinpeng Wang 王新鹏. Intelligent Information Processing Lab of Computer
+            Science,
+            Tongji University, Shanghai 201804, China. Powered by <a href="http://jekyllrb.com/"
+                                                                     rel="nofollow">Jekyll</a> &amp; <a
                     href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a
                     href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal
                 Mistakes</a>.
