--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
     <script type="text/x-mathjax-config;executed=true">
          MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } });
 
+
     </script>
     <script type="text/x-mathjax-config;executed=true">
          MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], processEscapes: true } });
+
 
     </script>
     <script src="./victor_files/latest.js.下载" async=""></script><!-- end custom head snippets -->
@@ -786,7 +788,7 @@
         <div class="page__inner-wrap">
             <header><h1 class="page__title" itemprop="headline">Xinpeng Wang 王新鹏</h1></header>
             <section class="page__content" itemprop="text">
-                <p>I am now a first-year Ph.D. student in the Department of
+                <p>I am now a first-year graduate student in the Intelligent Information Processing Lab, Department of
                     Computer Science and Technology, Tongji University, Shanghai, China.
                     Here is my <a href="https://victorup.github.io/_pages/xinpeng_wang_cv.pdf">cv</a>.
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
@@ -804,8 +806,9 @@
                         Story Generation Using Knowledge Graph under Psychological States.
                         <em>WCMC Journal 2021 (Supervisor No.1, Student No.2)</em>.
                         <a href="https://downloads.hindawi.com/journals/wcmc/2021/5530618.pdf">[pdf]</a></li>
-                    <li>Feifei Xu, Shanlin Zhou*, <strong>Xinpeng Wang</strong>,  Yunpu Ma, Volker Tresp, Yuyi Wang, Shanlin Zhou, and Haizhou Du.
-                       Controllable MultiCharacter Psychology-Oriented Story Generation.
+                    <li>Feifei Xu, Shanlin Zhou*, <strong>Xinpeng Wang</strong>, Yunpu Ma, Volker Tresp, Yuyi Wang,
+                        Shanlin Zhou, and Haizhou Du.
+                        Controllable MultiCharacter Psychology-Oriented Story Generation.
                         <em>CIKM 2020 (Supervisor No.1, Student No.2)</em>.
                         <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a></li>
 
