--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
             <section class="page__content" itemprop="text">
                 <p>I am now a first-year graduate student in the Intelligent Information Processing Lab, Department of
                     Computer Science and Technology, Tongji University, Shanghai, China.
-                    Here is my <a href="https://victorup.github.io/_pages/xinpeng_wang_cv.pdf">cv</a>.
+                    Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>.
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
                 <p>My research interest is open-ended language generation,
                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
