--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
             <section class="page__content" itemprop="text">
                 <p>I am now a first-year graduate student in the Intelligent Information Processing Lab, Department of
                     Computer Science and Technology, Tongji University, Shanghai, China.
-                    Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>.
+<!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
                 <p>My research interest is open-ended language generation,
                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
@@ -804,14 +804,13 @@
                         <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
                     <li>Feifei Xu, <strong>Xinpeng Wang </strong>, Shanlin Zhou.
                         Story Generation Using Knowledge Graph under Psychological States.
-                        <em>WCMC Journal 2021 (Supervisor No.1, Student No.2)</em>.
+                        <em>Wireless Communications and Mobile Computing 2021</em> (Supervisor No.1, Student No.2).
                         <a href="https://downloads.hindawi.com/journals/wcmc/2021/5530618.pdf">[pdf]</a></li>
                     <li>Feifei Xu, Shanlin Zhou*, <strong>Xinpeng Wang</strong>, Yunpu Ma, Volker Tresp, Yuyi Wang,
                         Shanlin Zhou, and Haizhou Du.
                         Controllable MultiCharacter Psychology-Oriented Story Generation.
-                        <em>CIKM 2020 (Supervisor No.1, Student No.2)</em>.
-                        <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a></li>
-
+                        <em>CIKM 2020</em> (Supervisor No.1, Student No.2).
+                        <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a></li>, <a href="https://github.com/victorup/SoCP">[code]</a></li>
                 </ol>
             </section>
             <footer class="page__meta"></footer>
