--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
                         Shanlin Zhou, and Haizhou Du.
                         Controllable MultiCharacter Psychology-Oriented Story Generation.
                         <em>CIKM 2020</em> (Supervisor No.1, Student No.2).
-                        <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a></li>, <a href="https://github.com/victorup/SoCP">[code]</a></li>
+                        <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a>, <a href="https://github.com/victorup/SoCP">[code]</a></li>
                 </ol>
             </section>
             <footer class="page__meta"></footer>
