--- a/index.html
+++ b/index.html
@@ -794,23 +794,23 @@
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
                 <p>My research interest is open-ended language generation,
                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
-                    with knowledge enhancing and emotion-driving, etc.</p>
+                    with knowledge-enhancing and emotion-driving, etc.</p>
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
-                    <li>Feifei Xu, Shanlin Zhou*, <strong>Xinpeng Wang *</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
+                    <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang*</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
                         Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion
-                        <em>DASFAA 2022, <strong>Best Paper</strong></em>.
+                        <em>DASFAA 2022</em>, (<strong>Best Paper</strong>).
                         <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
-                    <li>Feifei Xu, <strong>Xinpeng Wang </strong>, Shanlin Zhou.
+                    <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Shanlin Zhou.
                         Story Generation Using Knowledge Graph under Psychological States.
                         <em>Wireless Communications and Mobile Computing 2021</em> (Supervisor No.1, Student No.2).
                         <a href="https://downloads.hindawi.com/journals/wcmc/2021/5530618.pdf">[pdf]</a></li>
-                    <li>Feifei Xu, Shanlin Zhou*, <strong>Xinpeng Wang</strong>, Yunpu Ma, Volker Tresp, Yuyi Wang,
-                        Shanlin Zhou, and Haizhou Du.
+                    <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Yunpu Ma, Volker Tresp, Yuyi Wang, Shanlin Zhou, Haizhou Du.
                         Controllable MultiCharacter Psychology-Oriented Story Generation.
                         <em>CIKM 2020</em> (Supervisor No.1, Student No.2).
-                        <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a>, <a href="https://github.com/victorup/SoCP">[code]</a></li>
+                        <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a>, 
+                        <a href="https://github.com/victorup/SoCP">[code]</a></li>
                 </ol>
             </section>
             <footer class="page__meta"></footer>
