--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
                 <p>My research interest is open-ended language generation,
                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
-                    with knowledge-enhancing and emotion-driving, etc.</p>
+                    with knowledge-enhancing and emotion-driving.</p>
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
