--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
                 <ol>
                     <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang*</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
                         Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion
-                        <em>DASFAA 2022</em>, (<strong>Best Paper</strong>).
+                        <em>DASFAA 2022</em> (<strong>Best Paper</strong>).
                         <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
                     <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Shanlin Zhou.
                         Story Generation Using Knowledge Graph under Psychological States.
