--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
         <div class="page__inner-wrap">
             <header><h1 class="page__title" itemprop="headline">Xinpeng Wang 王新鹏</h1></header>
             <section class="page__content" itemprop="text">
-                <p>I am now a first-year Ph.D. student in the Intelligent Information Processing Lab, Department of
+                <p>I am now a second-year Ph.D. student in the Intelligent Information Processing Lab, Department of
                     Computer Science and Technology, Tongji University, Shanghai, China.
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
@@ -798,8 +798,17 @@
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
-                    <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang*</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
-                        Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion
+                    <li><strong>Xinpeng Wang</strong>, Han Jiang, Zhihua Wei, Shanlin Zhou.
+                        CHAE: Fine-Grained Controllable Story Generation with Characters, Actions and Emotions.
+                        <em>COLING 2022</em>.
+                        <a href="https://xxx.pdf">[pdf]</a></li>,
+                        <a href="https://github.com/victorup/CHAE">[code]</a></li>
+                    <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang</strong>.
+                        Apeak-CG: Automatically Predicting Emotion Based Dynamic Multi-form Knowledge Fusion Conversation Generation.
+                        <em>Neurocomputing 2022</em>.
+                        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231222008360">[pdf]</a></li>
+                    <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
+                        Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion.
                         <em>DASFAA 2022</em> (<strong>Best Paper</strong>).
                         <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
                     <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Shanlin Zhou.
