--- a/index.html
+++ b/index.html
@@ -795,14 +795,15 @@
                 <p>My research interest is open-ended language generation,
                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
                     with knowledge-enhancing and emotion-driving.</p>
-                <p>I am now doing research about multimodal controllable generation at Microsoft Research Asia as an intern, advised by <a>href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">[Dr. Xiaoyuan Yi]</a>.</p>
+                <p>I am now doing research about multimodal controllable generation at Microsoft Research Asia as an intern, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">[Dr. Xiaoyuan Yi]</a>.</p>
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
                     <li><strong>Xinpeng Wang</strong>, Han Jiang, Zhihua Wei, Shanlin Zhou.
                         CHAE: Fine-Grained Controllable Story Generation with Characters, Actions and Emotions.
                         <em>COLING 2022</em>.
-                        <a href="https://xxx.pdf">[pdf]</a></li>, <a href="https://github.com/victorup/CHAE">[code]</a></li>
+                        <a href="https://xxx.pdf">[pdf]</a>, 
+                        <a href="https://github.com/victorup/CHAE">[code]</a></li>
                     <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang</strong>.
                         Apeak-CG: Automatically Predicting Emotion Based Dynamic Multi-form Knowledge Fusion Conversation Generation.
                         <em>Neurocomputing 2022</em>.
