--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                     <li><strong>Xinpeng Wang</strong>, Han Jiang, Zhihua Wei, Shanlin Zhou.
                         CHAE: Fine-Grained Controllable Story Generation with Characters, Actions and Emotions.
                         <em>COLING 2022</em>.
-                        <a href="https://xxx.pdf">[pdf]</a>, 
+                        <a href="https://github.com/victorup/CHAE">[pdf]</a>, 
                         <a href="https://github.com/victorup/CHAE">[code]</a></li>
                     <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang</strong>.
                         Apeak-CG: Automatically Predicting Emotion Based Dynamic Multi-form Knowledge Fusion Conversation Generation.
