--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
                 <p>My research interest is open-ended language generation,
                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
                     with knowledge-enhancing and emotion-driving.</p>
-                <p>I am now doing research about multimodal controllable generation at Microsoft Research Asia as an intern, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
+                <p>I am currently doing research about multimodal controllable generation at Microsoft Research Asia as an intern, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
@@ -808,7 +808,7 @@
                         Apeak-CG: Automatically Predicting Emotion Based Dynamic Multi-form Knowledge Fusion Conversation Generation.
                         <em>Neurocomputing 2022</em>.
                         <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231222008360">[pdf]</a></li>
-                    <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
+                    <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang*</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
                         Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion.
                         <em>DASFAA 2022</em> (<strong>Best Paper</strong>).
                         <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
