--- a/index.html
+++ b/index.html
@@ -814,11 +814,11 @@
                         <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
                     <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Shanlin Zhou.
                         Story Generation Using Knowledge Graph under Psychological States.
-                        <em>Wireless Communications and Mobile Computing 2021</em> (Supervisor No.1, Student No.2).
+                        <em>Wireless Communications and Mobile Computing 2021</em> (<strong>Supervisor No.1, Student No.2</strong>).
                         <a href="https://downloads.hindawi.com/journals/wcmc/2021/5530618.pdf">[pdf]</a></li>
                     <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Yunpu Ma, Volker Tresp, Yuyi Wang, Shanlin Zhou, Haizhou Du.
                         Controllable MultiCharacter Psychology-Oriented Story Generation.
-                        <em>CIKM 2020</em> (Supervisor No.1, Student No.2).
+                        <em>CIKM 2020</em> (<strong>Supervisor No.1, Student No.2</strong>).
                         <a href="https://arxiv.org/pdf/2010.05230v1.pdf">[pdf]</a>, 
                         <a href="https://github.com/victorup/SoCP">[code]</a></li>
                 </ol>
