--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
                 <p>My research interest is open-ended language generation,
                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
                     with knowledge-enhancing and emotion-driving.</p>
-                <p>I am currently doing research about multimodal controllable generation at Microsoft Research Asia as an intern, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
+                <p>I am currently an intern at Microsoft Research Asia studying multimodal generation, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
