--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
             <div class="author__avatar"><img src="./victor_files/Victor.jpg"
                                              class="author__avatar" alt="Xinpeng Wang "></div>
             <div class="author__content"><h3 class="author__name">Xinpeng Wang </h3>
-                <p class="author__bio">A first-year Ph.D. student at <a href="https://en.tongji.edu.cn/">Tongji
+                <p class="author__bio">A second-year Ph.D. student at <a href="https://en.tongji.edu.cn/">Tongji
                     University.</a></p></div>
             <div class="author__urls-wrapper">
                 <button class="btn btn--inverse">Follow</button>
