--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
             <div class="author__avatar"><img src="./victor_files/Victor.jpg"
                                              class="author__avatar" alt="Xinpeng Wang "></div>
             <div class="author__content"><h3 class="author__name">Xinpeng Wang </h3>
-                <p class="author__bio">A second-year Ph.D. student at <a href="https://en.tongji.edu.cn/">Tongji
+                <p class="author__bio">A third-year Ph.D. student at <a href="https://en.tongji.edu.cn/">Tongji
                     University.</a></p></div>
             <div class="author__urls-wrapper">
                 <button class="btn btn--inverse">Follow</button>
@@ -788,34 +788,42 @@
         <div class="page__inner-wrap">
             <header><h1 class="page__title" itemprop="headline">Xinpeng Wang 王新鹏</h1></header>
             <section class="page__content" itemprop="text">
-                <p>I am now a second-year Ph.D. student in the Intelligent Information Processing Lab, Department of
+                <p>I am now a third-year Ph.D. student in the Intelligent Information Processing Lab, Department of
                     Computer Science and Technology, Tongji University, Shanghai, China.
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
-                <p>My research interest is open-ended language generation,
-                    including <strong>story generation</strong> and <strong>dialogue generation</strong>
-                    with knowledge-enhancing and emotion-driving.</p>
-                <p>I am currently an intern at Microsoft Research Asia studying multimodal generation, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
+                <p>My research interest is large language model (LLM) and multimodal generation.
+<!--                     open-ended language generation -->
+<!--                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
+                    with knowledge-enhancing and emotion-driving.</p> -->
+                <p>I am currently an intern at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
+<!--                 studying multimodal generation -->
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
+                    <li><strong>Xinpeng Wang</strong>, Xiaoyuan Yi, Han Jiang, Shanlin Zhou, Zhihua Wei, Xing Xie.
+                        ToViLaG: Your Visual-Language Generative Model is Also An Evildoer.
+                        <em>EMNLP 2023 Main Conference (Oral)</em>.
+                        <a href="https://arxiv.org/pdf/2312.11523.pdf">[pdf]</a>, 
+                        <a href="https://github.com/victorup/ToViLaG">[code]</a></li>
                     <li><strong>Xinpeng Wang</strong>, Han Jiang, Zhihua Wei, Shanlin Zhou.
                         CHAE: Fine-Grained Controllable Story Generation with Characters, Actions and Emotions.
                         <em>COLING 2022</em>.
-                        <a href="https://github.com/victorup/CHAE">[pdf]</a>, 
+                        <a href="https://arxiv.org/abs/2210.05221">[pdf]</a>, 
                         <a href="https://github.com/victorup/CHAE">[code]</a></li>
-                    <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang</strong>.
+<!--                     <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang</strong>.
                         Apeak-CG: Automatically Predicting Emotion Based Dynamic Multi-form Knowledge Fusion Conversation Generation.
                         <em>Neurocomputing 2022</em>.
-                        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231222008360">[pdf]</a></li>
+                        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231222008360">[pdf]</a></li> -->
                     <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang*</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
                         Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion.
                         <em>DASFAA 2022</em> (<strong>Best Paper</strong>).
                         <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
-                    <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Shanlin Zhou.
+                        <a href="https://github.com/foolfun/DMKCM">[code]</a></li>
+<!--                     <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Shanlin Zhou.
                         Story Generation Using Knowledge Graph under Psychological States.
                         <em>Wireless Communications and Mobile Computing 2021</em> (<strong>Supervisor No.1, Student No.2</strong>).
-                        <a href="https://downloads.hindawi.com/journals/wcmc/2021/5530618.pdf">[pdf]</a></li>
+                        <a href="https://downloads.hindawi.com/journals/wcmc/2021/5530618.pdf">[pdf]</a></li> -->
                     <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Yunpu Ma, Volker Tresp, Yuyi Wang, Shanlin Zhou, Haizhou Du.
                         Controllable MultiCharacter Psychology-Oriented Story Generation.
                         <em>CIKM 2020</em> (<strong>Supervisor No.1, Student No.2</strong>).
@@ -832,7 +840,7 @@
         <div class="page__footer-follow">
             <ul class="social-icons"></ul>
         </div>
-        <div class="page__footer-copyright">© 2022 Xinpeng Wang 王新鹏. Intelligent Information Processing Lab of Computer
+        <div class="page__footer-copyright">© 2023 Xinpeng Wang 王新鹏. Intelligent Information Processing Lab of Computer
             Science,
             Tongji University, Shanghai 201804, China. Powered by <a href="http://jekyllrb.com/"
                                                                      rel="nofollow">Jekyll</a> &amp; <a
