--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                     <li>Feifei Xu*, Shanlin Zhou*, <strong>Xinpeng Wang*</strong>, Yunpu Ma, Wenkai Zhang, Zhisong Li.
                         Open-domain Dialogue Generation Grounded with Dynamic Multi-form Knowledge Fusion.
                         <em>DASFAA 2022</em> (<strong>Best Paper</strong>).
-                        <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>
+                        <a href="https://arxiv.org/pdf/2204.11239.pdf">[pdf]</a></li>,
                         <a href="https://github.com/foolfun/DMKCM">[code]</a></li>
 <!--                     <li>Feifei Xu, <strong>Xinpeng Wang</strong>, Shanlin Zhou.
                         Story Generation Using Knowledge Graph under Psychological States.
