--- a/index.html
+++ b/index.html
@@ -801,6 +801,10 @@
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
+                    <li><strong>Xinpeng Wang</strong>, Shitong Duan, Xiaoyuan Yi, Jing Yao, Shanlin Zhou, Zhihua Wei, Peng Zhang, Dongkuan Xu, Maosong Sun, Xing Xie.
+                        On the Essence and Prospect: An Investigation of Alignment Approaches for Big Models.
+                        <em>arXiv preprint</em>.
+                        <a href="https://arxiv.org/pdf/2403.04204.pdf">[pdf]</a></li>
                     <li><strong>Xinpeng Wang</strong>, Xiaoyuan Yi, Han Jiang, Shanlin Zhou, Zhihua Wei, Xing Xie.
                         ToViLaG: Your Visual-Language Generative Model is Also An Evildoer.
                         <em>EMNLP 2023 Main Conference (Oral)</em>.
