--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
-                    <li><strong>Xinpeng Wang</strong>, Shitong Duan, Xiaoyuan Yi, Jing Yao, Shanlin Zhou, Zhihua Wei, Peng Zhang, Dongkuan Xu, Maosong Sun, Xing Xie.
+                    <li><strong>Xinpeng Wang*</strong>, Shitong Duan*, Xiaoyuan Yi, Jing Yao, Shanlin Zhou, Zhihua Wei, Peng Zhang, Dongkuan Xu, Maosong Sun, Xing Xie.
                         On the Essence and Prospect: An Investigation of Alignment Approaches for Big Models.
                         <em>arXiv preprint 2024</em>.
                         <a href="https://arxiv.org/pdf/2403.04204.pdf">[pdf]</a></li>
